--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/dist/js/palette.js": "/dist/js/palette.js",
-    "/dist/css/style.css": "/dist/css/style.css",
-    "/dist/js/script.js": "/dist/js/script.js"
+    "/dist/js/script.js": "/dist/js/script.js",
+    "/dist/css/style.css": "/dist/css/style.css"
 }
