--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/ChiaraPassaro/colorpalette#readme",
   "devDependencies": {
+    "jquery": "^3.3.1",
     "laravel-mix": "^4.0.14",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.16.1",
