--- a/package.json
+++ b/package.json
@@ -23,14 +23,26 @@
   },
   "homepage": "https://github.com/ChiaraPassaro/colorpalette#readme",
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
     "jquery": "^3.3.1",
     "laravel-mix": "^4.0.14",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.16.1",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.22"
+    "vue-template-compiler": "^2.5.22",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "chart.js": "^2.7.3"
+    "@babel/core": "^7.2.2",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.5",
+    "chart.js": "^2.7.3",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.3"
   }
 }
